--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -39,12 +39,12 @@ jobs:
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
       - name: Validate Kubernetes manifests
-        uses: stefanprodan/kube-tools@v1
+        uses: docker://ghcr.io/yannh/kubeconform:latest
         with:
           kubectl: 1.28.3
-          kubeval: 0.16.1
+          kubeconform: latest
           command: |
-            kubeval --strict -d k8s
+            kubeconform --strict -verbose k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/main' }}
