--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
       - name: Validate Kubernetes manifests
-        uses: yannh/kubeconform:latest-alpine
+        uses: ghcr.io/yannh/kubeconform:latest-alpine
         with:
           kubectl: 1.28.3
           kubeconform: latest
