--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -39,10 +39,9 @@ jobs:
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
       - name: Validate Kubernetes manifests
-        uses: yannh/kubeconform/actions/checkout
+        uses: docker://ghcr.io/yannh/kubeconform:latest
         with:
           kubectl: 1.28.3
-          kubeconform: latest
           command: |
             kubeconform --strict -verbose k8s
   package:
