Modified commit-stage.yml steps.

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -40,10 +40,8 @@ jobs:
           sarif_file: ${{ steps.scan.outputs.sarif }}
       - name: Validate Kubernetes manifests
         uses: docker://ghcr.io/yannh/kubeconform:latest
-        with:
-          kubectl: 1.28.3
-          command: |
-            kubeconform --strict -verbose k8s
+        run: |
+          kubeconform --strict -verbose k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/main' }}
