--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -41,13 +41,14 @@ jobs:
   kubeconform:
     runs-on: ubuntu-latest
     steps:
-      - name: login to Github Packages
-        run: echo "${{ github.token }}" | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
       - uses: actions/checkout@v2
-      - uses: docker://ghcr.io/yannh/kubeconform:latest
+      - uses: yokawasa/action-setup-kube-tools@v0.9.2
         with:
-          run:
-            kubeconform --strict -verbose k8s
+          setup-tools: |
+            kubeconform
+          kubeconform: '0.5.0'
+      - run: |
+          kubeconform --strict -verbose k8s
   package:
     name: Package and Publish
     if: ${{ github.ref == 'refs/heads/main' }}
